maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:44: error: not found: value virage
      virage = virage - 1
      ^PledgeMaze:56: error: not found: value virage
      virage = virage + 1
      ^PledgeMaze:77: error: value et is not a member of Boolean
    if (virages==0 et getDirection==Direction.NORD) {
                   ^